--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
+	<title>Assignment Solution for Module 2</title>
 </head>
 <body>
-Hello Faizal
+<h1> Our Menu </h1>
 </body>
 </html>
