--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
 <h1> Our Menu </h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-sm-6 col-xs-12">
+		</div>
+	</div>
+</div>
 </body>
 </html>
