--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -18,7 +18,7 @@
 		<div class="col-md-4 col-sm-6 col-xs-12">
         <p id="beef">Beef
         </p>
-        <p class="beef">Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times.[1] Beef is a source of high-quality protein and nutrients.
+        <p class="beef">Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.
         </p>
 		</div>
 		<div class="col-md-4 col-sm-12 col-xs-12">
