--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,27 +7,38 @@
 </head>
 <body>
 <h1> Our Menu </h1>
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-4 col-sm-6 col-xs-12 ">
-        <p id="chicken">Chicken
-        </p >
-        <p class="chicken">Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
-        </p>
+        	<div class="section">	
+        		<h4 id="chicken">Chicken
+        		</h4>
+        		<p>Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
+        		</p>
+			</div>
 		</div>
+		
+	
+
 		<div class="col-md-4 col-sm-6 col-xs-12">
-        <p id="beef">Beef
-        </p>
-        <p class="beef">Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.
-        </p>
+			<div class="section">
+        		<h4 id="beef">Beef
+        		</h4>
+        		<p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.
+        		</p>
+			</div>
 		</div>
-		<div class="col-md-4 col-sm-12 col-xs-12">
-        <p id="sushi">Sushi
-        </p>
-        <p class="sushi">Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice. It is often prepared with seafood, such as calamari, eel, or imitation crab meat. Many others are vegetarian. Sushi is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish is popular as a garnish.
-        </p>
+
+
+			<div class="col-md-4 col-sm-12 col-xs-12">
+				<div class="section">
+        		<h4 id="sushi">Sushi
+        		</h4>
+        		<p>Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice. It is often prepared with seafood, such as calamari, eel, or imitation crab meat. Many others are vegetarian. Sushi is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish is popular as a garnish.
+       			 </p>
+       			</div>
+			</div>
 		</div>
-	</div>
 </div>
 </body>
 </html>
