--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Assignment Solution for Module 2</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,7 +14,7 @@
         	<div class="section">	
         		<h3 id="chicken">Chicken
         		</h3>
-        		<p>Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
+        		<p>Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world.
         		</p>
 			</div>
 		</div>
@@ -34,7 +35,7 @@
 				<div class="section">
         		<h3 id="sushi">Sushi
         		</h3>
-        		<p>Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice. It is often prepared with seafood, such as calamari, eel, or imitation crab meat. Many others are vegetarian. Sushi is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish is popular as a garnish.
+        		<p>Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice. It is often prepared with seafood, such as calamari, eel, or imitation crab meat. Many others are vegetarian. Sushi is often served with pickled ginger.
        			 </p>
        			</div>
 			</div>
