--- a/module3-website/index.html
+++ b/module3-website/index.html
@@ -7,15 +7,28 @@
 	<title>David Chu's China Bistro</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700" rel="stylesheet" type='text/css'>
 </head>
 <body>
-<!-- Jquery (Bootstrap JS Plugins depend on it) -->
-<script src="jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="script.js"></script>
 
-<p>Hello World </p>
+<!-- Jquery (Bootstrap JS Plugins depend on it) -->
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
+
+<header>
+	<nav id="header-nav" class="navbar navbar-default">
+		<div class="container">
+			<div class="navbar-header">
+				<a href="index.html" class="">
+					<div id="logo-img" alt="logo image"></div>
+				</a>
+		
+
+		</div>
+	</nav>
+</header>
+
 
 </body>
 </html>
