--- a/module3-website/index.html
+++ b/module3-website/index.html
@@ -25,7 +25,7 @@
 				<a href="index.html"><h1>David Chu's China Bistro</h1>
 				</a>
 				<p>
-					<img src="C:/Users/Nikki/coursera-test/module3-website/certification.png" alt="Kosher certification">
+					<img src="../certification.png" alt="Kosher certification">
 					<span>Kosher Certified</span>
 				</p>
 			</div>
