--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -54,8 +54,10 @@
 	<div class="row">
 		<div class="col-xs-12">
         	<div class="section">	
+        		<a name="chicken"><h3 id="chicken">Chicken
+        		</h3></a>
         		
-        		<p> <span id="chicken"><a name="chicken">Chicken</a></span> <br> <br> 
+        		<p>  <br> <br> 
         			Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
 
 Chicken can be prepared in a vast range of ways, including baking, grilling, barbecuing, frying, and boiling, among many others, depending on its purpose. Since the latter half of the 20th century, prepared chicken has become a staple of fast food. Chicken is sometimes cited as being more healthful than red meat, with lower concentrations of cholesterol and saturated fat.
@@ -74,8 +76,9 @@ In the United States in the 1800s, chicken was more expensive than other meats a
 
 		<div class="col-xs-12">
 			<div class="section">
-				
-        		<p> <span id="beef"><a name="beef">Beef</span> </a><br> <br>
+				<a name="beef"><h3 id="chicken">Beef
+        		</h3></a>
+        		<p> <br> <br>
         		Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.
 
 Beef skeletal muscle meat can be used as is by merely cutting into certain parts roasts, short ribs or steak (filet mignon, sirloin steak, rump steak, rib steak, rib eye steak, hanger steak, etc.), while other cuts are processed (corned beef or beef jerky). Trimmings, on the other hand, are usually mixed with meat from older, leaner (therefore tougher) cattle, are ground, minced or used in sausages. The blood is used in some varieties called blood sausage. Other parts that are eaten include other muscles and offal, such as the oxtail, liver, tongue, tripe from the reticulum or rumen.
@@ -94,7 +97,9 @@ In 2015, the world's largest exporters of beef were India, Brazil and Australia.
 
 			<div class="col-xs-12">
 				<div class="section">
-        		<p> <span id="sushi"><a name="sushi">Sushi</span></a> <br> <br>
+					<a name="sushi"><h3 id="chicken"> Sushi
+        		</h3> </a>
+        		<p> <br> <br>
         			Sushi is a Japanese dish of specially prepared vinegared rice  usually with some sugar and salt, combined with a variety of ingredients , such as seafood, vegetables, and occasionally tropical fruits. Styles of sushi and its presentation vary widely, but the key ingredient is "sushi rice", also referred to as shari , or sumeshi . The term sushi is no longer used in its original context and literally means "sour-tasting".
 
 Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice. It is often prepared with seafood, such as calamari, eel, or imitation crab meat. Many others are vegetarian. Sushi is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish is popular as a garnish.
