--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment Solution for Module 3</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -76,7 +75,7 @@ In the United States in the 1800s, chicken was more expensive than other meats a
 
 		<div class="col-xs-12">
 			<div class="section">
-				<a name="beef"><h3 id="chicken">Beef
+				<a name="beef"><h3 id="beef">Beef
         		</h3></a>
         		<p> <br> <br>
         		Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.
@@ -97,7 +96,7 @@ In 2015, the world's largest exporters of beef were India, Brazil and Australia.
 
 			<div class="col-xs-12">
 				<div class="section">
-					<a name="sushi"><h3 id="chicken"> Sushi
+					<a name="sushi"><h3 id="sushi"> Sushi
         		</h3> </a>
         		<p> <br> <br>
         			Sushi is a Japanese dish of specially prepared vinegared rice  usually with some sugar and salt, combined with a variety of ingredients , such as seafood, vegetables, and occasionally tropical fruits. Styles of sushi and its presentation vary widely, but the key ingredient is "sushi rice", also referred to as shari , or sumeshi . The term sushi is no longer used in its original context and literally means "sour-tasting".
