--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Hello Coursera!</title>
+	<meta charset="utf-8">
+	<script src="js/script.js"></script>
+	<script>
+		console.log(x);
+	</script>
 </head>
 <body>
 <h1>
-	Hello Coursera! It's a Great Course
+	Lecture
 </h1>
-</body>
+
+	<script>
+		console.log(x);
+	</script>
+	</body>
 </html>
